kubernetes/01-namespace.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: easyshop

  labels:
    app: easyshop
    environment: dev
    project: easyshop-devsecops-gitops
    managed-by: argocd
