kubernetes/07-mongodb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: mongodb
  namespace: easyshop

spec:
  serviceName: mongodb-service

  replicas: 1

  selector:
    matchLabels:
      app: mongodb

  template:
    metadata:
      labels:
        app: mongodb

    spec:
      containers:
        - name: mongodb

          image: mongo:7.0

          ports:
            - containerPort: 27017

          volumeMounts:
            - name: mongodb-storage
              mountPath: /data/db

          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"

            limits:
              memory: "512Mi"
              cpu: "500m"

          livenessProbe:
            tcpSocket:
              port: 27017
            initialDelaySeconds: 30
            periodSeconds: 10

          readinessProbe:
            tcpSocket:
              port: 27017
            initialDelaySeconds: 10
            periodSeconds: 5

      volumes:
        - name: mongodb-storage
          persistentVolumeClaim:
            claimName: mongodb-pvc
