kubernetes/09-easyshop-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: easyshop-service
  namespace: easyshop

spec:
  type: ClusterIP

  ports:
    - port: 80
      targetPort: 3000

  selector:
    app: easyshop
