kubernetes/10-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: easyshop-ingress
  namespace: easyshop

  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

spec:
  ingressClassName: alb

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: easyshop-service
                port:
                  number: 80
